# SimpleDownloadServer

./: Cargo.toml  Readme.md  test_executable_portability.sh
.github/workflows/: rust.yml
assets/: directory_listing.html  login_form.html
src/: cli.rs  error.rs  fs.rs  http.rs  lib.rs  main.rs  response.rs  server.rs  templates.rs  tests.rs  utils.rs
templates/directory/: index.html  script.js  styles.css
templates/error/: page.html  script.js  styles.css
tests/: comprehensive_test.rs  integration_test.rs  template_embedding_test.rs
