[package]
name = "hdl_sv"
version = "2.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.5.6", features = ["derive"] }
humansize = "2.1.3"
rust-embed = "8.3.0"
threadpool = "1.8.1"
glob = "0.3.1"
log = "0.4.20"
env_logger = "0.11.3"
rand = "0.9.2"
base64 = "0.22.1"

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
tempfile = "3.8.0"

