[package]
name = "hdl_sv"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
glob = "0.3.1"
log = "0.4.20"
env_logger = "0.11.3"
base64 = "0.22.1"

[dev-dependencies]
reqwest = { version = "0.12.22", features = ["blocking"] }
tempfile = "3.20.0"
threadpool = "1.8.1"


